--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <link rel='stylesheet' href='/styles.css' />
   <title>Classic!</title>
+  <!-- TODO Add in jQuery -->
 </head>
 <body>
-
+  <h1>Welcome to the Produce Stand</h1>
+  <section>
+    <h2>Here are todays offerings</h2>
+    <div id="items"></div>
+  </section>
+  <section>
+    <h2>Here is what's in your basket so far</h2>
+    <div id="basket"></div>
+    <button id="checkout-button">Checkout</button>
+  </section>
   <script src="/scripts.js" charset="utf-8"></script>
 </body>
 </html>
