--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <link rel='stylesheet' href='/styles.css' />
   <title>Classic!</title>
-  <!-- TODO Add in jQuery -->
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous">
+  </script>
 </head>
 <body>
   <h1>Welcome to the Produce Stand</h1>
